[Gold V] Title: 톱니바퀴, Time: 116 ms, Memory: 14572 KB -BaekjoonHub